[tool.poetry]
name = "quamash"
version = "0.6.1"
description = "Implementation of the PEP 3156 Event-Loop with Qt."
authors = ["Mark Thomas West Harviston <mark.harviston@gmail.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.6"
pyside2 = {version = "^5.12",optional = true}
PyQt5 = {version = "^5.12",optional = true}


[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-commas = "^2.0"
pep8-naming = "^0.8.2"
flake8-docstrings = "^1.3"
flake8-debugger = "^3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
