[tool.poetry]
name = "quamash"
version = "0.6.1"
description = "Implementation of the PEP 3156 Event-Loop with Qt."
authors = ["Mark Harviston <mark.harviston@gmail.com> Arve Knudsen <arve.knudsen@gmail.com>"]
license = "BSD-2-Clause"
readme = "README.rst"
repository = "https://github.com/harvimt/quamash"
classifiers = [
	'Development Status :: 3 - Alpha',
	'Intended Audience :: Developers',
	'Operating System :: Microsoft :: Windows',
	'Operating System :: MacOS :: MacOS X',
	'Operating System :: POSIX',
	'Environment :: X11 Applications :: Qt',
]

[tool.poetry.dependencies]
python = "^3.6"
pyside2 = {version = "^5.12",optional = true}
PyQt5 = {version = "^5.12",optional = true}

[tool.poetry.extras]
pyside2 = ["pyside2"]
pyqt5 = ["PyQt5"]

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-commas = "^2.0"
pep8-naming = "^0.8.2"
flake8-docstrings = "^1.3"
flake8-debugger = "^3.1"
tox = "^3.9"
pytest = "^4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
